--- a/src/app/pages/subscription/subscription.component.html
+++ b/src/app/pages/subscription/subscription.component.html
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <textarea formControlName="infoUniversity" class="form-control form-control-lg" placeholder="Description(optional)"></textarea>
+                        <textarea formControlName="infoPensum" class="form-control form-control-lg" placeholder="Description(optional)"></textarea>
                     </div>
                 </div>
                 <div class="div3sub">
