--- a/src/app/pages/crear-producto/crear-producto.component.html
+++ b/src/app/pages/crear-producto/crear-producto.component.html
@@ -30,14 +30,14 @@
                             </div>
                             <div class="mb-3">
                                 <label for="bornDate" class="form-label">Fecha de nacimiento</label>
-                                <input type="date" formControlNameformControlName="bornDate" id="bornDate">
+                                <input type="date" formControlName="bornDate" id="bornDate">
                                 <div class="text-danger" *ngIf="studentForm.get('bornDate')?.hasError('required')&& studentForm.get('bornDate')?.touched">
                                     <span>El nombre  bornDate<strong>es obligatorio</strong></span>
                                 </div>
                             </div>
                             <div class="mb-3">
                                 <label for="idCard" class="form-label">Teléfono</label>
-                                <input type="text" formControlNameformControlName="phoneNumber" id="phoneNumber">
+                                <input type="text" formControlName="phoneNumber" id="phoneNumber">
                                 <div class="text-danger" *ngIf="studentForm.get('phoneNumber')?.hasError('required')&& studentForm.get('phoneNumber')?.touched">
                                     <span>El nombre phoneNumber <strong>es obligatorio</strong></span>
                                 </div>
@@ -51,13 +51,11 @@
 
                             <div class="mb-3">
                                 <label for="carrer" class="form-label">Carrera</label>
-                                <select formControlName="carrer" id="carrer">
-                        <option value="0">Selec University Carrer</option>
-                        <option value="0">Selec University Carrer</option>
-                        <option value="0">Selec University Carrer</option>
-                        <option value="0">Selec University Carrer</option>
-                        <option value="0">Selec University Carrer</option>
-                      </select>
+                                <select formControlName="carrer" class="form-control">
+                              <option *ngFor="let c of listUniversity" value="{{c.id}}">
+                                {{c.pensumName}}
+                              </option>
+                            </select>
                                 <div class="text-danger" *ngIf="studentForm.get('carrer')?.hasError('required')&& studentForm.get('carrer')?.touched">
                                     <span>El nombre carrer <strong>es obligatorio</strong></span>
                                 </div>
@@ -65,12 +63,10 @@
 
                             <div class="mb-3">
                                 <label for="university" class="form-label">Universidad</label>
-                                <select formControlName="university" id="university">
-                              <option value="0">Selec University</option>
-                              <option value="0">Selec University</option>
-                              <option value="0">Selec University</option>
-                              <option value="0">Selec University</option>
-                              <option value="0">Selec University</option>
+                                <select formControlName="university" class="form-control">
+                              <option *ngFor="let u of listUniversity" value="{{u.id}}">
+                                {{u.universityName}}
+                              </option>
                             </select>
                                 <div class="text-danger" *ngIf="studentForm.get('university')?.hasError('required')&& studentForm.get('university')?.touched">
                                     <span>El nombre university <strong>es obligatorio</strong></span>
@@ -90,7 +86,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="idCard" class="form-label">Dirección</label>
-                                <textarea formControlNameformControlName="homeAddress" id="homeAddress"></textarea>
+                                <textarea formControlName="homeAddress" id="homeAddress"></textarea>
                                 <div class="text-danger" *ngIf="studentForm.get('homeAddress')?.hasError('required')&& studentForm.get('homeAddress')?.touched">
                                     <span>El nombre  homeAddress<strong>es obligatorio</strong></span>
                                 </div>
